[package]
name = "selfportrait"
version = "0.1.0"
authors = ["Axel Cocat <ax.cocat@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { git = "https://github.com/r-o-b-o-t-o/serenity", branch = "current" }
typemap = "0.3.3"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
ctrlc = "3.1.3"
log = { version = "0.4.8", features = ["serde"] }
fern = "0.5.9"
chrono = "0.4.10"
strfmt = "0.1.6"
actix-web = "1.0.9"
actix-files = "0.1.7"
regex = "1.3.1"
reqwest = "0.9.22"
indicatif = "0.13.0"
config = "0.9.3"
