[package]
name = "selfportrait"
version = "0.1.0"
authors = ["Axel Cocat <ax.cocat@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { git = "https://github.com/r-o-b-o-t-o/serenity", branch = "current", default-features = false, features = ["builder", "client", "framework", "gateway", "model", "http", "standard_framework", "utils", "rustls_backend"] }
typemap = "0.3.3"
serde = "1.0.107"
serde_derive = "1.0.107"
serde_json = "1.0.52"
ctrlc = "3.1.4"
log = { version = "0.4.8", features = ["serde"] }
fern = "0.6.0"
chrono = "0.4.11"
strfmt = "0.1.6"
actix-web = "1.0.9"
actix-files = "0.1.7"
regex = "1.3.7"
reqwest = "0.9.24"
indicatif = "0.14.0"
config = "0.10.1"
